--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3964,7 +3964,7 @@
 
 			+r(768)
 				height: 130px
-				
+
 			img
 				object-fit: cover
 				width: 100%
@@ -4134,7 +4134,282 @@
 			+r(992)
 				font-size: 12px
 
-	.contacts
-		padding-top: 90px 0
+//------------------------Category-----------
+.category
+	background-color: $bgColor
+	padding-top: 95px
+	padding-bottom: 135px
+
+	+r(1440)
+		padding-bottom: 50px
+
+	+r(768)
+		padding-top: 50px
+		padding-bottom: 50px
+
+	+r(576)
+		padding-top: 30px
+
+	&__wrapper
+		display: grid
+		grid-template-columns: 1fr 5fr
+		position: relative
+
+		+r(1200)
+			font-size: 45px
+
+		+r(767)
+			font-size: 32px
+			text-align: center
+
+		+r(576)
+			grid-template-columns: 1fr
+
+	&__list
+		padding-right: 30px
+		grid-row-start: 1
+		grid-row-end: 5
+
+		+r(576)
+			display: none
+
+	&__top
+		display: flex
+		flex-direction: column
+
+	&__title
+		margin-bottom: 40px
+
+		+r(992)
+			margin-bottom: 20px
+
+	&__subtitle
+		font-size: 22px
+		margin-bottom: 45px
+
+		+r(1200)
+			margin-bottom: 25px
+
+		+r(992)
+			font-size: 18px
+
+	&__info
+		padding-top: 55px
+		border-top: 1px solid #E4DCD4
+		display: flex
+		flex-direction: column
+		gap: 40px
+		margin-bottom: 115px
+
+		+r(1200)
+			margin-bottom: 50px
+			padding-top: 25px
+
+		+r(992)
+			gap: 20px
+
+		+r(768)
+			margin-bottom: 30px
+
+		p 
+			font-size: 18px
+			line-height: 2.0
+
+			+r(992)
+				font-size: 16px
+				line-height: 1.6
+
+		span
+			font-weight: 600
+
+	&__assort
+		display: flex
+		flex-direction: column
+		align-items: flex-start
+		margin-bottom: 90px
+
+		+r(1200)	
+			margin-bottom: 50px
+
+		+r(992)
+			margin-bottom: 30px
+
+		&_title
+			font-size: 40px
+			font-family: $titleFont
+			margin-bottom: 50px
+			text-align: left
+
+			+r(1200)
+				font-size: 32px
+				margin-bottom: 30px
+
+			+r(576)
+				text-align: center
+
+		&_list
+			padding: 55px 0
+			border-top: 1px solid #E4DCD4
+			border-bottom: 1px solid #E4DCD4
+			width: 100%
+			display: flex
+			flex-direction: column
+			gap: 50px
+
+			+r(992)
+				gap: 30px
+				padding: 30px 0
+
+		&_item
+			+between
+			gap: 75px
+			justify-content: flex-start
+			align-items: flex-start
+			flex-wrap: nowrap
+
+			+r(1200)
+				gap: 40px
+
+			+r(992)
+				gap: 20px
+
+			+r(768)
+				flex-direction: column
+
+			+r(576)
+				flex-direction: row
+
+			+r(480)
+				gap: 10px
+
+		&_img
+			max-width: 250px
+			width: 100%
+			height: 210px
+
+			+r(1200)
+				max-width: 220px
+				height: 180px
+
+			+r(992)
+				max-width: 180px
+				height: 140px
+				align-self: center
+
+			+r(480)
+				max-width: 150px
+				height: 120px
+
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+
+		&_info
+			display: flex
+			flex-direction: column
+			gap: 30px
+
+			+r(992)
+				gap: 15px
+
+			+r(768)
+				width: 100%
+				align-items: center
+
+			+r(576)
+				align-items: flex-start
+				text-align: left
+
+			+r(480)
+				gap: 10px
+
+
+		&_name
+			font-size: 24px
+
+			+r(1200)
+				font-size: 20px
+
+			+r(992)
+				font-size: 18px
+
+			+r(480)
+				font-size: 16px
+
+		&_price
+			font-size: 24px
+			font-family: $titleFont
+			color: $accent
+
+			+r(1200)
+				font-size: 20px
+
+			+r(992)
+				font-size: 18px
+
+			+r(480)
+				font-size: 16px
+
+		&_button
+			width: 165px
+			height: 60px
+			font-size: 14px
+
+			+r(992)
+				height: 50px
+				width: 140px
+
+			+r(480)
+				width: 120px
+				height: 40px
+
+	&__using
+		display: flex
+		flex-direction: column
+		align-items: flex-start
+		margin-bottom: 90px
+
+		+r(992)
+			margin-bottom: 50px
+
+		&_text
+			max-width: 930px
+			font-size: 16px
+			margin-bottom: 55px
+			text-align: left
+
+			+r(992)
+				margin-bottom: 30px
+
+		&_list
+			display: grid
+			grid-template-columns: 1fr 1fr
+			grid-column-gap: 80px
+			grid-row-gap: 20px
+
+			+r(992)
+				grid-column-gap: 50px
+				grid-row-gap: 15px
+
+			+r(768)
+				grid-template-columns: 1fr
+
+		&_item
+			display: flex
+			gap: 35px
+
+			img 
+				max-width: 27px
+
+
+			p 
+				font-size: 16px
+				font-weight: 600
+				text-align: left
+
+	.about-us__slider
+		margin-bottom: 0
+
 
 		
