--- a/sass/main.sass
+++ b/sass/main.sass
@@ -416,8 +416,11 @@
 
 		&:hover
 			ul
-				top: 100%
+				top: 115%
 				visibility: visible
+				opacity: 1
+
+			&::after
 				opacity: 1
 
 		&::before
@@ -425,6 +428,15 @@
 			position: absolute
 			top: 30px
 			left: 0
+
+		&::after
+			content: url(../img/triangle.svg)
+			position: absolute
+			bottom: -15px
+			left: 20px
+			opacity: 0
+			+transition
+
 
 		ul
 			position: absolute
@@ -434,8 +446,37 @@
 			width: 290px
 			box-shadow: 0 5px 5px 0 rgba(#000, .2)
 			visibility: hidden
+			text-align: left
 			opacity: 0
+			padding: 30px
+			display: flex
+			flex-direction: column
+			gap: 15px
 			+transition
+
+			a
+				font-family: $mainFont
+				font-size: 16px
+				display: flex
+				align-items: flex-start
+				justify-content: flex-start
+				padding: 0
+				border: none
+				margin: 0
+
+				&:hover
+					border: none
+
+			li
+				display: flex
+				align-items: center
+				justify-content: center
+				gap: 15px
+
+				&:hover
+					svg
+						fill: rgb(176, 122, 88)
+
 
 			+r(1200)
 				background-color: $bgColor
@@ -448,8 +489,6 @@
 
 		li
 			width: 100%
-			margin-bottom: 3px
-			border-bottom: 1px solid $accent
 
 			&:last-child
 				margin-bottom: 0
@@ -869,13 +908,14 @@
 		max-width: 410px
 		gap: 25px
 		text-align: left
-
+		
 		+r(992)
 			gap: 15px
 
 		img
 			object-fit: cover
 			width: 100%
+			position: relative
 
 			+r(1200)
 				width: 100%
@@ -890,6 +930,7 @@
 		&:hover
 			color: $accent
 			cursor: pointer
+
 
 	&-pagination
 		width: 100%
@@ -981,6 +1022,35 @@
 
 .slider-arrow
 
+.slider__img-wrapper
+	position: relative
+
+	&::after
+		content: ''
+		position: absolute
+		width: 100%
+		height: 100%
+		background-color: $accent
+		top: 0
+		right: 0
+		opacity: 0
+
+	&::before
+		content: url(../img/zoom.svg)
+		position: absolute
+		top: 40%
+		right: 40%
+		opacity: 0
+		z-index: 100
+		+transition
+
+	&:hover
+		&::after
+			opacity: 0.6
+
+		&::before
+			opacity: 1
+			
 //--------------------------------------------------------------
 
 .turnkey
@@ -3778,7 +3848,7 @@
 					max-width: 220px
 					margin-right: 20px !important
 
-				img
+				.slider__img-wrapper
 					border: 10px solid #fff
 
 					+r(992)
@@ -4081,12 +4151,12 @@
 					max-width: 220px
 					margin-right: 20px !important
 
-				img
+				.slider__img-wrapper
 					border: 10px solid #fff
 
 					+r(992)
 						border: 5px solid #fff
-
+				
 				a
 					+r(768)
 						font-size: 14px
